src/assets/scss/_settings.scss
/* Global Settings */

// Tags
body {
  font-size: 16px; // base font size
  font-family: $font;
}

h1 {
  font-size: 2rem;
  padding: 0 0 1rem;
  font-family: $font;
  font-weight: 600;

  @media #{$small} {
    font-size: 4rem;
  }
}

h2 {
  font-size: 1.5rem;
  padding: 0 0 1rem;
  font-family: $font;
  font-weight: 600;

  @media #{$small} {
    font-size: 3rem;
  }
}

h3 {
  font-size: 1.2rem;
  padding: 0 0 1rem;
  font-family: $font;
  font-weight: 600;

  @media #{$small} {
    font-size: 2rem;
  }
}

p {
  font-size: 1rem;
  line-height: 2rem;

  @media #{$small} {
    font-size: 2rem;
  }
}

a {
  // reset color with variable
  color: $gold;
  text-decoration: none;
  &.router-link-exact-active {
	// reset color with variable
	color: $gold;
  }
}

span {
  font-family: $font;
  font-weight: 600;
  letter-spacing: 2px;
}

button {
	font-size: 1.2rem;
	font-family: $font;
  font-weight: 600;
  background: transparent;
  border: 0;
  padding: 0;
}

.button {
	padding: 0.5rem 2rem;
	border: 1px solid $gold;
	color: $gold;
}

ul {
  padding: 0 0 1rem;

  li {
    padding: 0 0 0.5rem;
  }
}

.svg-inline--fa {
  color: $gold;
  font-size: 1.4rem;
  padding-right: 0.5rem;

  @media #{$small} {
    font-size: 1.5rem;
  }
}

// Default Classes

#app {
  font-family: $font;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

